--- a/assets/stylesheets/site/_home.scss
+++ b/assets/stylesheets/site/_home.scss
@@ -38,4 +38,12 @@
 		@include transition(opacity 0.5s);
 		opacity: 0;
 	}
+	.latest {
+		ul {
+			margin: 10px;
+		}
+		.note {
+			font-style: italic;
+		}
+	}
 }
